<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".addsearch.AddSearchFragment"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:id="@+id/basket_imageview"
        android:layout_width="150dp"
        android:layout_height="110dp"
        android:autofillHints="@string/shopping_bag"
        android:contentDescription="@string/shopping_bag"
        android:scaleType="centerInside"
        android:src="@drawable/basket" />

    <EditText
        android:id="@+id/productName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_margin"
        android:ems="10"
        android:autofillHints="@string/name_of_the_product"
        android:hint="@string/name_of_the_product"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/searchPhrase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_margin"
        android:ems="10"
        android:autofillHints="@string/search_phrase"
        android:hint="@string/search_phrase"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/minPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_margin"
        android:ems="10"
        android:autofillHints="@string/minimum_price"
        android:hint="@string/minimum_price"
        android:inputType="number" />

    <EditText
        android:id="@+id/maxPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_margin"
        android:ems="10"
        android:autofillHints="@string/maximum_price"
        android:hint="@string/maximum_price"
        android:inputType="number" />

    <Button
        android:id="@+id/addNewProductBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_margin"
        android:background="@color/colorAccent"
        android:text="@string/add"
        android:textColor="#ffffff" />

</LinearLayout>
