<resources>
    <string name="app_name">RealDeal</string>
    <string name="sign_out">Sign Out</string>
    <string name="email_not_verified">Your email is not verified.</string>
    <string name="text_to_send_verification_email">Tap this button to send verification email.</string>
    <string name="text_to_refresh_activity">If you already verified your email, refresh this page:</string>
    <string name="send_email">SEND EMAIL</string>
    <string name="refresh">REFRESH</string>
    <string name="add_product">Add searchProduct</string>
    <string name="empty_addproduct_message">All fields are required</string>
    <string name="name_of_the_product">Name of the product</string>
    <string name="search_phrase">Search phrase</string>
    <string name="minimum_price">Minimum price</string>
    <string name="maximum_price">Maximum price</string>
    <string name="add">ADD</string>
    <string name="shopping_bag">shopping bag</string>
    <string name="pricemismatch_addproduct_message">Min value must be less than max value</string>
    <string name="delete_this_search">DELETE THIS SEARCH</string>
    <string name="no_searches_message">You don\'t have any searches. Click + button to add a new one :)</string>
</resources>
